src/test/resources/mutation/error/mutationTypeWithoutID/schema.graphqls
input EditInput @record(table : "CUSTOMER") {
  firstName: String @column(name : "FIRST_NAME")
  email: String
}

type Mutation {
  editCustomerWithoutID(input: EditInput!): ID! @mutationType(typeName: UPDATE)
}
